--- a/pages/resume.html
+++ b/pages/resume.html
@@ -16,26 +16,27 @@
 	  <!-- employment -->
 	  <section>
          <h2> Employment </h2>
+		 <hr class="line">
 		 <div class="company">
 		   <h3>
-		     <span> VOLTUS </span>
+		     <span> Voltus, Inc. </span>
 		     <span> Remote </span>
 		   </h3>
 		   <h3 class="role">
-		     <span class="title">Senior Business Analyst</span>
+		     <span class="title">Senior Business Intelligence Analyst</span>
 			 <span class="date"> Aug 2022 - Present</span>
 		   </h3>
-		   <ul>
-		     <li> This is a thing I did </li>
-			 <li> This is another thing I did </li>
-		   </ul>
+		   <ul class="workthings">
+		     <li> Ramped new product from $100,000 to $2 million in ARR </li>
+			 <li> Improved onboarding efficiency to increase customer LTV by 2% </li>
+			</ul>
 		   <h3 class="role">
 		     <span class="title"> Customer Success Analyst </span>
 			 <span class="date"> Mar 2021 - Aug 2022 </span>
 		   </h3>
-		   <ul>
-		     <li> Thing 3 I think I did </li>
-			 <li> Thing 4 </li>
+		   <ul class="workthings">
+		     <li> Developed reporting suite on customer platform and comms engagement </li>
+			 <li> Supported implementation of new data warehouse, ETL, and data lineage tooling </li>
 		   </ul> 
 		 </ul>
 		 </div>
@@ -45,9 +46,12 @@
 		     <span> Sunnyvale, CA </span>
 		   </h3>
 		   <h3 class="role">
-		     <span class="title"> Project Lead </span>
+		     <span class="title"> Project Lead / Analyst </span>
 			 <span class="date"> Jan 2019 - Dec 2020 </span>
-		   </h3>		   
+		   </h3>
+		   <ul class="workthings">
+			<li> Enabled smart charging solutions for mid-to-heavy duty EV fleets </li>
+		   </ul>		   
 		 </div>
 		 <div class="company">
 		   <h3>
@@ -55,19 +59,75 @@
 			 <span> Ulaanbaatar, MGL </span>
 		   </h3>
 		   <h3 class="role">
-		     <span class="title"> Company Secretary </span>
+		     <span class="title"> IARUDI LLC </span>
 			 <span class="date"> May 2015 - Sep 2018 </span>
 		   </h3>
+		   <ul class="workthings">
+			<li> Served as Company Secretary on a $50m natural resource project investment </li>
+			<li> Built reporting processes to implement the Board's vision through strategic financial planning </li>
+		   </ul>
+		   <h3 class="role">
+			<span class="title"> Smart Air Mongolia </span>
+			<span class="date"> Sep 2015 - Sep 2018 </span>
+		   </h3>
+		   <ul class="workthings">
+			<li> As CEO, Controller, and delivery boy, arranged financing, legal incorporation, and all operational processes </li>
+			<li> Improved annual revenue by over 600% before succesful sale of a 76% stake in the company </li>
+		   </ul>
 		 </div>
       </section>
 	  <!-- technologies -->
-	  <section>
-         <h2> Technologies </h2>
-      </section>
+	 <section>
+		<h2> Education </h2>
+		<hr class="line">
+		<div class="school">
+			<h3>
+				<span> Duke University </span>
+				<span> Durham, NC </span>
+			</h3>
+			<h3 class="courses">
+				<span> B.A. Mathematics, Religion </span>
+				<span> 2014 </span>
+			</h3>
+			<ul class="desc">
+				<li>Co-founded the Duke Energy Club; awarded the Campus Sustainability Fellowship</li>
+			</ul>
+		</div>
+		<div class="school">
+			<h3>
+				<span> UC Berkeley Extension</span>
+				<span> Remote </span>
+			</h3>
+			<ul class="desc"> 
+				<li> Microeconomics, Macroeconomics</li>
+			</ul>
+		</div>
+	 </section> 
+	 <section>
+		<h2> Skills & Technologies </h2>
+		<hr class="line">
+		<ul class="technologies">
+		   <li> AWS </li>
+		   <li> Python, Pandas, Numpy, Matplotlib </li>
+		   <li> SQL </li>
+		   <li> MATLAB </li>
+		   <li> Responsive HTML, CSS </li>
+		   <li> Bash/Shell </li>
+		   <li> Vim, Neovim </li>
+		</ul>
+	 </section>
 	  <!-- interests --> 
-	  <section>
-		 <h2> Interests </h2>
-      </section>
+	<section>
+		<h2> Interests </h2>
+		<hr class="line">
+		<ul class="interests">
+			<li> Reading </li>
+			<li> Running </li>
+			<li> Coffee  </li>
+			<li> Cool technology & climate </li>
+			<li> Veggies </li>
+		</ul>
+    </section>
     </div>
   </body>
 </html>
