--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
   <nav class='navbar'>  
     <ul class='pagelinks'> 
        <li class='home'e><a href=''>About me</a></li>
-       <li class='pagelink'><a href='#!'>Blogs</a></li> 
-       <li class='pagelink'><a href='#!'>Projects</a></li>
+       <li class='pagelink'><a href=',pages/blogs.html'>Blogs</a></li> 
+       <li class='pagelink'><a href='.pages/projects.html'>Projects</a></li>
        <li class='pagelink'><a href="./pages/resume.html">Resume</a></li>
     </ul>
     <ul class='medialinks'>
         <li class='github'>
-	  <a href='https://github.com/natethsieh' target='_blank'>
-	     <img class='github-thumbnail' src='resources/pictures/thumbnails/github.png' alt='github' title='github' width='40' height='40'>
+	        <a href='https://github.com/natethsieh' target='_blank'>
+	          <img class='github-thumbnail' src='resources/pictures/thumbnails/github.png' alt='github' title='github' width='40' height='40'>
           </a> 
        </li>
        <li class='twitter'>
-	  <a href='https://www.twitter.com/natethsieh' target='_blank'>
-	     <img class='twitter-thumbnail' src='resources/pictures/thumbnails/twitter.png' alt='twitter' title='twitter' width='40' height='40'>
-	  </a> 
+         <a href='https://www.twitter.com/natethsieh' target='_blank'>
+           <img class='twitter-thumbnail' src='resources/pictures/thumbnails/twitter.png' alt='twitter' title='twitter' width='40' height='40'>
+         </a> 
        </li>
        <li class='linkedin'>
-	  <a href='https://www.linkedin.com/in/nathanthsieh' target='_blank'>
-	     <img class='linkedin-thumbnail' src='resources/pictures/thumbnails/linkedin.png' alt='linkedin' title='linkedin' width= '40' height='40'>
-	  </a> 
+         <a href='https://www.linkedin.com/in/nathanthsieh' target='_blank'>
+           <img class='linkedin-thumbnail' src='resources/pictures/thumbnails/linkedin.png' alt='linkedin' title='linkedin' width= '40' height='40'>
+	       </a> 
        </li>
     </ul>  
   </nav>
@@ -41,14 +41,13 @@
   <br>
   <div class='aboutme'>
     <p>Name's Nathan. Born and raised in savory NC</p>
-	
-	<ul class='stam'>
+	  <ul class='stam'>
       <li>I tell people I'm from Durham</li>
-	  <li>But I'm actually from Chapel Hill </li>
-	  <li>It's because I went to Duke, where I studied Math & Religion</li>
+      <li>But I'm actually from Chapel Hill </li>
+	    <li>It's because I went to Duke, where I studied Math & Religion</li>
       <li>I work hard to decarbonize our energy economy, to connect distributed resources to power markets and monetize them, and to live the values I believe in</li>
-	  <li>Sandwiches are to be cut diagonally</li>
-	</ul> 
+	    <li>Sandwiches are to be cut diagonally</li>
+	  </ul> 
   </div>
 </body>
 </html>
