--- a/pages/projects.html
+++ b/pages/projects.html
@@ -22,17 +22,17 @@
     <ul class='medialinks'>
         <li class='github'>
 	  <a href='https://github.com/natethsieh' target='_blank'>
-	     <img class='github-thumbnail' src='resources/pictures/thumbnails/github.png' alt='github' title='github' width='40' height='40'>
+	     <img class='github-thumbnail' src='../resources/pictures/thumbnails/github.png' alt='github' title='github' width='40' height='40'>
           </a> 
        </li>
        <li class='twitter'>
 	  <a href='https://www.twitter.com/natethsieh' target='_blank'>
-	     <img class='twitter-thumbnail' src='resources/pictures/thumbnails/twitter.png' alt='twitter' title='twitter' width='40' height='40'>
+	     <img class='twitter-thumbnail' src='../resources/pictures/thumbnails/twitter.png' alt='twitter' title='twitter' width='40' height='40'>
 	  </a> 
        </li>
        <li class='linkedin'>
 	  <a href='https://www.linkedin.com/in/nathanthsieh' target='_blank'>
-	     <img class='linkedin-thumbnail' src='resources/pictures/thumbnails/linkedin.png' alt='linkedin' title='linkedin' width= '40' height='40'>
+	     <img class='linkedin-thumbnail' src='../resources/pictures/thumbnails/linkedin.png' alt='linkedin' title='linkedin' width= '40' height='40'>
 	  </a> 
        </li>
     </ul>  
