--- a/pages/projects.html
+++ b/pages/projects.html
@@ -3,7 +3,7 @@
 
 <head>
   <title> nth </title>
-  <link href="../resources/css/projects.css" type="text/css" rel="stylesheet">
+  <link href="../resources/css/index.css" type="text/css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
@@ -14,33 +14,33 @@
   <div>
   <nav class='navbar'>  
     <ul class='pagelinks'> 
-       <li class='home'e><a href=''>About me</a></li>
-       <li class='pagelink'><a href='#!'>Blogs</a></li> 
-       <li class='pagelink'><a href='#!'>Projects</a></li>
-       <li class='pagelink'><a href="./pages/resume.html">Resume</a></li>
+       <li class='home'><a href=''>About me</a></li>
+       <li class='pagelink'><a href='./blogs.html'>Blogs</a></li> 
+       <li class='pagelink'><a href=''>Projects</a></li>
+       <li class='pagelink'><a href="./resume.html">Resume</a></li>
     </ul>
     <ul class='medialinks'>
         <li class='github'>
-	  <a href='https://github.com/natethsieh' target='_blank'>
-	     <img class='github-thumbnail' src='../resources/pictures/thumbnails/github.png' alt='github' title='github' width='40' height='40'>
+	        <a href='https://github.com/natethsieh' target='_blank'>
+	          <img class='github-thumbnail' src='../resources/pictures/thumbnails/github.png' alt='github' title='github' width='40' height='40'>
           </a> 
        </li>
        <li class='twitter'>
-	  <a href='https://www.twitter.com/natethsieh' target='_blank'>
-	     <img class='twitter-thumbnail' src='../resources/pictures/thumbnails/twitter.png' alt='twitter' title='twitter' width='40' height='40'>
-	  </a> 
+         <a href='https://www.twitter.com/natethsieh' target='_blank'>
+           <img class='twitter-thumbnail' src='../resources/pictures/thumbnails/twitter.png' alt='twitter' title='twitter' width='40' height='40'>
+         </a> 
        </li>
        <li class='linkedin'>
-	  <a href='https://www.linkedin.com/in/nathanthsieh' target='_blank'>
-	     <img class='linkedin-thumbnail' src='../resources/pictures/thumbnails/linkedin.png' alt='linkedin' title='linkedin' width= '40' height='40'>
-	  </a> 
+         <a href='https://www.linkedin.com/in/nathanthsieh' target='_blank'>
+           <img class='linkedin-thumbnail' src='../resources/pictures/thumbnails/linkedin.png' alt='linkedin' title='linkedin' width= '40' height='40'>
+	       </a> 
        </li>
     </ul>  
   </nav>
   </div>
   <br>
   <div class='aboutme'>
-    <p> This is a project page for future dev </p>
+    <p>Some content</p>
   </div>
 </body>
 </html>
