--- a/pages/blogs.html
+++ b/pages/blogs.html
@@ -14,7 +14,7 @@
   <div>
   <nav class='navbar'>  
     <ul class='pagelinks'> 
-       <li class='home'><a href='../index.html'>About me</a></li>
+       <li class='pagelink'><a href='../index.html'>About me</a></li>
        <li class='pagelink'><a href=''>Blogs</a></li> 
        <li class='pagelink'><a href='./projects.html'>Projects</a></li>
        <li class='pagelink'><a href="./resume.html">Resume</a></li>
