does this work?

--- a/pages/blogs.html
+++ b/pages/blogs.html
@@ -3,7 +3,7 @@
 
 <head>
   <title> nth </title>
-  <link href="../resources/css/index.css" type="text/css" rel="stylesheet">
+  <link href="../resources/css/blogs.css" type="text/css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
@@ -40,7 +40,17 @@
   </div>
   <br>
   <div class='aboutme'>
-    <p>Some more content</p>
+    <p class="desc">
+      A few topics that I find intriguing and like to think about 
+      and, better yet, sometimes write about and confer with others on. 
+      Then I like to try and shape these things into a legitimate set of thoughts 
+      and put pen to paper and really analyze why it is the way it is. but this is actually 
+      just me taking up white space so that I can learn a little bit more about CSS formatting and whether or not this works. 
+    </p>
+    <p>futbol is lyfe</p>
+      <li class="futbol">how fast can messi strike a ball?</li>
+      <li class="futbol">what is the rate of return of a 4-3-3?</li>
+    <p>what is...</p>
   </div>
 </body>
 </html>
