--- a/pages/blogs.html
+++ b/pages/blogs.html
@@ -39,7 +39,7 @@
   </nav>
   </div>
   <br>
-  <div class='aboutme'>
+  <div class='topics'>
     <p class="desc">
       A few topics that I find intriguing and like to think about 
       and, better yet, sometimes write about and confer with others on. 
