--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
   </nav>
   </div>
   <br>
-  <div class='aboutme'>
+  <div class="aboutme">
     <p>Name's Nathan. Born and raised in savory NC</p>
-	  <ul class='stam'>
+	  <ul class="stam">
       <li>I tell people I'm from Durham</li>
       <li>But I'm actually from Chapel Hill </li>
 	    <li>It's because I went to Duke, where I studied Math & Religion</li>
