--- a/pages/blogs.html
+++ b/pages/blogs.html
@@ -48,7 +48,7 @@
       just me taking up white space so that I can learn a little bit more about CSS formatting and whether or not this works. 
     </p>
     <p>futbol is lyfe</p>
-      <li class="futbol">how fast can messi strike a ball?</li>
+      <li class="futbol"><a href="../resources/blog-posts/first_blog_post.html">how fast can messi strike a ball?</a></li>
       <li class="futbol">what is the rate of return of a 4-3-3?</li>
     <p>what is...</p>
   </div>
