--- a/pages/resume.html
+++ b/pages/resume.html
@@ -100,7 +100,7 @@
 			<span> Remote </span>
 		</h3>
 		<ul class="desc"> 
-			<li> Microeconomics, Macroeconomics</li>
+			<li> Microeconomics (A-), Macroeconomics (A), Financial Accounting (A+)</li>
 		</ul>
 	</div>
 	</section> 
