--- a/pages/code.html
+++ b/pages/code.html
@@ -3,7 +3,7 @@
 
 <head>
   <title> nth </title>
-  <link href="../resources/css/blogs.css" type="text/css" rel="stylesheet">
+  <link href="../resources/css/code.css" type="text/css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
@@ -15,8 +15,8 @@
   <nav class='navbar'>  
     <ul class='pagelinks'> 
        <li class='pagelink'><a href='../index.html'>About me</a></li>
-       <li class='pagelink'><a href=''>Blogs</a></li> 
-       <li class='pagelink'><a href='./projects.html'>Projects</a></li>
+       <li class='pagelink'><a href='./thoughts.html'>Thoughts</a></li> 
+       <li class='pagelink'><a href=''>Code</a></li>
        <li class='pagelink'><a href="./resume.html">Resume</a></li>
     </ul>
     <ul class='medialinks'>
@@ -39,18 +39,8 @@
   </nav>
   </div>
   <br>
-  <div class='topics'>
-    <p class="desc">
-      A few topics that I find intriguing and like to think about 
-      and, better yet, sometimes write about and confer with others on. 
-      Then I like to try and shape these things into a legitimate set of thoughts 
-      and put pen to paper and really analyze why it is the way it is. but this is actually 
-      just me taking up white space so that I can learn a little bit more about CSS formatting and whether or not this works. 
-    </p>
-    <p>futbol is lyfe</p>
-      <li class="futbol"><a href="../resources/blog-posts/first_blog_post.html">how fast can messi strike a ball?</a></li>
-      <li class="futbol">what is the rate of return of a 4-3-3?</li>
-    <p>what is...</p>
+  <div class='aboutme'>
+    <p>Some content</p>
   </div>
 </body>
 </html>
