--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <nav class='navbar'>  
     <ul class='pagelinks'> 
        <li class='home'e><a href=''>About me</a></li>
-       <li class='pagelink'><a href='./pages/blogs.html'>Blogs</a></li> 
-       <li class='pagelink'><a href='./pages/projects.html'>Projects</a></li>
+       <li class='pagelink'><a href='./pages/thoughts.html'>Thoughts</a></li> 
+       <li class='pagelink'><a href='./pages/code.html'>Code</a></li>
        <li class='pagelink'><a href="./pages/resume.html">Resume</a></li>
     </ul>
     <ul class='medialinks'>
