--- a/pages/thoughts.html
+++ b/pages/thoughts.html
@@ -16,7 +16,7 @@
     <ul class='pagelinks'> 
        <li class='pagelink'><a href='../index.html'>About me</a></li>
        <li class='pagelink'><a href=''>Thoughts</a></li> 
-       <li class='pagelink'><a href='./code.html'>Projects</a></li>
+       <li class='pagelink'><a href='./code.html'>Code</a></li>
        <li class='pagelink'><a href="./resume.html">Resume</a></li>
     </ul>
     <ul class='medialinks'>
