--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
        <li class='home'e><a href=''>About me</a></li>
        <li class='pagelink'><a href='./pages/thoughts.html'>Thoughts</a></li> 
        <li class='pagelink'><a href='./pages/code.html'>Code</a></li>
+       <li class='pagelink'><a href='./pages/books.html'>Books</a></li>
        <li class='pagelink'><a href="./pages/resume.html">Resume</a></li>
     </ul>
     <ul class='medialinks'>
