--- a/pages/thoughts.html
+++ b/pages/thoughts.html
@@ -17,6 +17,7 @@
        <li class='pagelink'><a href='../index.html'>About me</a></li>
        <li class='pagelink'><a href=''>Thoughts</a></li> 
        <li class='pagelink'><a href='./code.html'>Code</a></li>
+       <li class='pagelink'><a href='./books.html'>Books</a></li>
        <li class='pagelink'><a href="./resume.html">Resume</a></li>
     </ul>
     <ul class='medialinks'>
