--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <nav class='navbar'>  
     <ul class='pagelinks'> 
        <li class='home'e><a href=''>About me</a></li>
-       <li class='pagelink'><a href='./pages/thoughts.html'>Thoughts</a></li> 
+       <li class='pagelink'><a href='./pages/thoughts.html'>Writing</a></li> 
        <li class='pagelink'><a href='./pages/code.html'>Code</a></li>
        <li class='pagelink'><a href='./pages/books.html'>Books</a></li>
        <li class='pagelink'><a href="./pages/resume.html">Resume</a></li>
@@ -41,7 +41,7 @@
   </div>
   <br>
   <div class="aboutme">
-    <p>Name's Nathan. Born and raised in savory NC</p>
+    <p>Name's Nathan. Born and raised in savory NC. Energy nerd obssessed with language, culture, connection, and technology.</p>
 	  <ul class="stam">
       <li>I tell people I'm from Durham</li>
       <li>But I'm actually from Chapel Hill </li>
