--- a/pages/code.html
+++ b/pages/code.html
@@ -15,7 +15,7 @@
   <nav class='navbar'>  
     <ul class='pagelinks'> 
        <li class='pagelink'><a href='../index.html'>About me</a></li>
-       <li class='pagelink'><a href='./thoughts.html'>Thoughts</a></li> 
+       <li class='pagelink'><a href='./writing.html'>Writing</a></li> 
        <li class='pagelink'><a href=''>Code</a></li>
        <li class='pagelink'><a href='./books.html'>Books</a></li>
        <li class='pagelink'><a href="./resume.html">Resume</a></li>
