--- a/pages/books.html
+++ b/pages/books.html
@@ -15,7 +15,7 @@
   <nav class='navbar'>  
     <ul class='pagelinks'> 
        <li class='pagelink'><a href='../index.html'>About me</a></li>
-       <li class='pagelink'><a href='./thoughts.html'>Thoughts</a></li> 
+       <li class='pagelink'><a href='./writing.html'>Writing</a></li> 
        <li class='pagelink'><a href='./code.html'>Code</a></li>
        <li class='pagelink'><a href=''>Books</a></li>
        <li class='pagelink'><a href="./resume.html">Resume</a></li>
