--- a/pages/writing.html
+++ b/pages/writing.html
@@ -15,7 +15,7 @@
   <nav class='navbar'>  
     <ul class='pagelinks'> 
        <li class='pagelink'><a href='../index.html'>About me</a></li>
-       <li class='pagelink'><a href=''>Thoughts</a></li> 
+       <li class='pagelink'><a href=''>Writing</a></li> 
        <li class='pagelink'><a href='./code.html'>Code</a></li>
        <li class='pagelink'><a href='./books.html'>Books</a></li>
        <li class='pagelink'><a href="./resume.html">Resume</a></li>
@@ -41,17 +41,11 @@
   </div>
   <br>
   <div class='topics'>
-    <p class="desc">
-      A few topics that I find intriguing and like to think about 
-      and, better yet, sometimes write about and confer with others on. 
-      Then I like to try and shape these things into a legitimate set of thoughts 
-      and put pen to paper and really analyze why it is the way it is. but this is actually 
-      just me taking up white space so that I can learn a little bit more about CSS formatting and whether or not this works. 
-    </p>
+    <p>Smart Air Mongolia</p>
+      <li> <a href="https://blogs.ubc.ca/mongolia/2019/guest-post-airpollution-filters/">Guest Post</a> on Dr. Julian Dierkes' Mongolia-focused politics, history, and culture blog </li>
     <p>futbol is lyfe</p>
       <li class="futbol"><a href="../resources/blog-posts/first_blog_post.html">how fast can messi strike a ball?</a></li>
       <li class="futbol">what is the rate of return of a 4-3-3?</li>
-    <p>what is...</p>
   </div>
 </body>
 </html>
