--- a/pages/writing.html
+++ b/pages/writing.html
@@ -3,7 +3,7 @@
 
 <head>
   <title> nth </title>
-  <link href="../resources/css/thoughts.css" type="text/css" rel="stylesheet">
+  <link href="../resources/css/writing.css" type="text/css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
