--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <nav class='navbar'>  
     <ul class='pagelinks'> 
        <li class='home'e><a href=''>About me</a></li>
-       <li class='pagelink'><a href='./pages/thoughts.html'>Writing</a></li> 
+       <li class='pagelink'><a href='./pages/writing.html'>Writing</a></li> 
        <li class='pagelink'><a href='./pages/code.html'>Code</a></li>
        <li class='pagelink'><a href='./pages/books.html'>Books</a></li>
        <li class='pagelink'><a href="./pages/resume.html">Resume</a></li>
