--- a/pages/writing.html
+++ b/pages/writing.html
@@ -41,11 +41,7 @@
   </div>
   <br>
   <div class='topics'>
-    <p>Smart Air Mongolia</p>
-      <li> <a href="https://blogs.ubc.ca/mongolia/2019/guest-post-airpollution-filters/">Guest Post</a> on Dr. Julian Dierkes' Mongolia-focused politics, history, and culture blog </li>
-    <p>futbol is lyfe</p>
-      <li class="futbol"><a href="../resources/blog-posts/first_blog_post.html">how fast can messi strike a ball?</a></li>
-      <li class="futbol">what is the rate of return of a 4-3-3?</li>
+    <p> <a href="https://blogs.ubc.ca/mongolia/2019/guest-post-airpollution-filters/">Smart Air Mongolia</a></p>
   </div>
 </body>
 </html>
