--- a/pages/writing.html
+++ b/pages/writing.html
@@ -41,7 +41,7 @@
   </div>
   <br>
   <div class='topics'>
-    <p> <a href="https://blogs.ubc.ca/mongolia/2019/guest-post-airpollution-filters/">Smart Air Mongolia</a></p>
+    <p> 1) <a href="https://blogs.ubc.ca/mongolia/2019/guest-post-airpollution-filters/">Smart Air Mongolia</a></p>
   </div>
 </body>
 </html>
