--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </div>
   <br>
   <div class="aboutme">
-    <p>Name's Nathan. Born and raised in savory NC. Energy nerd obssessed with language, culture, connection, and technology.</p>
+    <p>Name's Nathan. Born and raised in savory NC. Energy nerd obssessed with language, culture, connection, and technology. Some other facts about me: </p>
 	  <ul class="stam">
       <li>I tell people I'm from Durham</li>
       <li>But I'm actually from Chapel Hill </li>
