adding some improv content

--- a/pages/writing.html
+++ b/pages/writing.html
@@ -41,7 +41,17 @@
   </div>
   <br>
   <div class='topics'>
-    <p> 1) <a href="https://blogs.ubc.ca/mongolia/2019/guest-post-airpollution-filters/">Smart Air Mongolia</a></p>
+    <h2> Essays</h2>
+    <ol>
+      <li> 
+          <b><a href="https://blogs.ubc.ca/mongolia/2019/guest-post-airpollution-filters/">Smart Air Mongolia, LLC</a> </b>: After I returned from my <a href="https://piaweb.princeton.edu/">Princeton in Asia</a> Fellowship in Mongolia, I wrote a guest column about my time building  
+          Smart Air for <a href="https://sppga.ubc.ca/profile/julian-dierkes/">Dr. Julian Dierkes</a>, a professor from the University of British Columbia studying natural resource economies in Asia
+      </li> 
+      <li>
+          <b><a href="../resources/blog-posts/whose_line_is_it.html">Whose Line Is It Anyway?:</a></b> a few notes on my time so far playing around with improv
+      </li>
+    </ol>
+
   </div>
 </body>
 </html>
