--- a/resources/blog-posts/whose_line_is_it.html
+++ b/resources/blog-posts/whose_line_is_it.html
@@ -13,8 +13,9 @@
     <h1> Whose Line Is It Anyway?</h1>
     <h2> <a href="../../pages/writing.html">back to writing </a></h2>
 </div>
+<br>
 <div>
-    <p>
+    <!-- <p>
         Content Content Content Content
         Excudent alii spirantia mollius aera credo equidem vivos ducent de marmore voltus. Hae tibi erunt artes, pacquique empore morem. 
         This is some boiler plate stuff to run on a bunch and see how this works in reality when It ry to format and blah blah paragraph one. 
@@ -27,6 +28,17 @@
         here because that would have been a lot faster but you are also learning a little bit real time about how to use this to write html and how the itnerface
         of writing it in VSCode works and functions and operates and now you want to explore how to find the right verb quickly and then one day you are oging to 
         learn really well how to construct good sentences in flight real time while blah blah. that is improv! Yay! 
+    </p> -->
+
+    <p>
+        Oddly, I have been doing this each week for professional development purposes. As someone that spends the vast majority of his time remotely in spreadsheets, I want to continue to develop my ability to be in tune, real time, with my colleagues, and work with them. Perhaps the carefully crafted decks, docs, and notebooks full of business analysis might even become fun. While it has given me just that, it has also been a captivating experience I intend to continue with.      
+    </p>
+
+    <p>
+        Two of the most foundational skills in improv are active listening and getting to base reality. Honestly, both are super applicable in just about any business environment. I’ll start with the latter as it is a bit more jargony but also, in my opinion, a more novel idea (though certainly tightly connected to the first in many ways). 
+    </p>
+    <p>
+        Let’s say you are tasked with building a skit with a stranger and are only given the prompt, “you walk into a room”. Is it a bar? A ballroom? Is it a safe room? As quickly as possible, you and your partner must establish a common reality so you can build together. To do this, you need to be completely willing to both give and receive clues that 
     </p>
 
 </div>
