--- a/resources/blog-posts/whose_line_is_it.html
+++ b/resources/blog-posts/whose_line_is_it.html
@@ -31,15 +31,10 @@
     </p> -->
 
     <p>
-        Oddly, I have been doing this each week for professional development purposes. As someone that spends the vast majority of his time remotely in spreadsheets, I want to continue to develop my ability to be in tune, real time, with my colleagues, and work with them. Perhaps the carefully crafted decks, docs, and notebooks full of business analysis might even become fun. While it has given me just that, it has also been a captivating experience I intend to continue with.      
+        Draft
     </p>
 
-    <p>
-        Two of the most foundational skills in improv are active listening and getting to base reality. Honestly, both are super applicable in just about any business environment. I’ll start with the latter as it is a bit more jargony but also, in my opinion, a more novel idea (though certainly tightly connected to the first in many ways). 
-    </p>
-    <p>
-        Let’s say you are tasked with building a skit with a stranger and are only given the prompt, “you walk into a room”. Is it a bar? A ballroom? Is it a safe room? As quickly as possible, you and your partner must establish a common reality so you can build together. To do this, you need to be completely willing to both give and receive clues that 
-    </p>
+    
 
 </div>
 
